# acp-squared

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: agents.json.example
docs/: index.html
src/acp2_proxy/: __init__.py  agent_registry.py  database.py  logging_config.py  main.py  models.py  run_manager.py  session_manager.py  settings.py  zed_agent.py
tests/: conftest.py  dummy_agent.py  test_agents.py  test_runs.py  test_stateful_agents.py
